editors/tree-sitter-ipe/test/corpus/declarations.txt
================================================================================
Module header with exposing list
================================================================================

module Main exposing (main, Msg)

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_name (upper_identifier))
    exposing: (exposing_list
      (exposed_item (lower_identifier))
      (exposed_item (upper_identifier)))))

================================================================================
Module header exposing all
================================================================================

module Ipe.String exposing (..)

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_name (upper_identifier))
    exposing: (exposing_list (double_dot))))

================================================================================
Imports with alias and exposing
================================================================================

module M exposing (x)

import Ipe.String as String
import Ipe.Tea.Web exposing (tea)
import Ipe.Basics exposing (..)

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_name (upper_identifier))
    exposing: (exposing_list (exposed_item (lower_identifier))))
  (import
    module: (module_name (upper_identifier))
    alias: (upper_identifier))
  (import
    module: (module_name (upper_identifier))
    exposing: (exposing_list (exposed_item (lower_identifier))))
  (import
    module: (module_name (upper_identifier))
    exposing: (exposing_list (double_dot))))

================================================================================
Union type with constructors
================================================================================

module M exposing (Msg)

type Msg
    = Increment
    | Decrement
    | Set Int


type Maybe a
    = Just a
    | Nothing

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_name (upper_identifier))
    exposing: (exposing_list (exposed_item (upper_identifier))))
  (type_declaration
    name: (upper_identifier)
    (constructor_list
      (constructor name: (upper_identifier))
      (constructor name: (upper_identifier))
      (constructor
        name: (upper_identifier)
        (type_constructor (upper_identifier)))))
  (type_declaration
    name: (upper_identifier)
    parameter: (lower_identifier)
    (constructor_list
      (constructor
        name: (upper_identifier)
        (type_variable (lower_identifier)))
      (constructor name: (upper_identifier)))))

================================================================================
Type alias with record and function annotation
================================================================================

module M exposing (Model)

type alias Model =
    { count : Int
    , label : String
    }


update : Msg -> Model -> Model
update msg model =
    model

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_name (upper_identifier))
    exposing: (exposing_list (exposed_item (upper_identifier))))
  (type_alias_declaration
    name: (upper_identifier)
    body: (record_type
      (record_type_field
        field: (lower_identifier)
        type: (type_constructor (upper_identifier)))
      (record_type_field
        field: (lower_identifier)
        type: (type_constructor (upper_identifier)))))
  (type_annotation
    name: (lower_identifier)
    type: (arrow_type
      (type_constructor (upper_identifier))
      (arrow_type
        (type_constructor (upper_identifier))
        (type_constructor (upper_identifier)))))
  (value_declaration
    name: (lower_identifier)
    parameter: (var_pattern (lower_identifier))
    parameter: (var_pattern (lower_identifier))
    body: (value_reference (lower_identifier))))
